[package]
name = "age-plugin-yubikey"
description = "YubiKey plugin for age clients"
version = "0.5.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/age-plugin-yubikey"
readme = "README.md"
keywords = ["age", "cli", "encryption", "yubikey"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70" # MSRV

[package.metadata.deb]
extended-description = """\
An age plugin adding support for YubiKeys and other PIV hardware tokens."""
section = "utils"
assets = [
    ["target/release/age-plugin-yubikey", "usr/bin/", "755"],
    ["target/manpages/age-plugin-yubikey.1.gz", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/age-plugin-yubikey/README.md", "644"],
]

[dependencies]
age-core = { git = "https://github.com/str4d/rage.git", rev = "c266bfa44c829621e2db647ced820fca357b032f" }
age-plugin = { git = "https://github.com/str4d/rage.git", rev = "c266bfa44c829621e2db647ced820fca357b032f" }
base64 = "0.21"
bech32 = "0.11"
console = { version = "0.15", default-features = false }
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
env_logger = "0.10"
getrandom = "0.2"
gumdrop = "0.8"
hex = "0.4"
log = "0.4"
p256 = { version = "0.14.0-pre.11", features = ["ecdh"] }
elliptic-curve = "=0.14.0-rc.14"
ecdsa = "=0.17.0-rc.7"
crypto-bigint = "=0.7.0-rc.6"
crypto-primes = "=0.7.0-pre.3"
hkdf = "=0.13.0-rc.1"
signature = "=3.0.0-rc.4"
rfc6979 = "=0.5.0-rc.1"
cipher = { version = "=0.5.0-rc.1", features = ["rand_core"] }
aes = { version = "=0.9.0-rc.1", features = ["zeroize"] }
des = "=0.9.0-rc.1"
chacha20poly1305 = "=0.11.0-rc.1"
pcsc = "2.4"
rand_core = "0.9"
sha2 = "0.11.0-rc.2"
which = "5"
x509 = "0.2"
x509-parser = "0.14"
x509-cert = "=0.3.0-rc.2"
der = "=0.8.0-rc.9"
spki = "=0.8.0-rc.4"
const-oid = "0.10"
yubikey = { git = "https://github.com/iqlusioninc/yubikey.rs", rev = "c96b50bcecffe93387d07b9642c10290a35ce3f4", features = ["untested"] }

# Translations
i18n-embed = { version = "0.15", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.9"
lazy_static = "1"
rust-embed = "8"

# GnuPG coexistence
sysinfo = "0.29"

[dev-dependencies]
flate2 = "1"
man = "0.3"
tempfile = "3"
test-with = "0.11"
which = "5"
